--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         <activity android:name=".activity.ResultActivity"/>
         <activity android:name=".activity.ProfileActivity"/>
         <activity android:name=".activity.ProceduresActivity"/>
+        <activity android:name=".activity.ConfirmVotingActivity"/>
     </application>
 
 </manifest>
